--- a/app/src/main/res/layout/item_checkbox_keyboard_setting.xml
+++ b/app/src/main/res/layout/item_checkbox_keyboard_setting.xml
@@ -5,16 +5,16 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/itemCheckBoxKeyboardSettingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/itemCheckBoxKeyboardSettingTitle"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="left"
+        android:text="" />
 
     <CheckBox
+        android:id="@+id/CheckBoxKeyboardSetting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/CheckBoxKeyboardSetting"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="left"
+        android:text="" />
 </LinearLayout>
