--- a/app/src/main/res/layout/item_text_keyboard_setting.xml
+++ b/app/src/main/res/layout/item_text_keyboard_setting.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/itemTextKeyboardSettingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/itemTextKeyboardSettingTitle"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="left"
+        android:text="" />
 </LinearLayout>
 
