--- a/app/src/main/res/layout/item_checkbox_keyboard_setting.xml
+++ b/app/src/main/res/layout/item_checkbox_keyboard_setting.xml
@@ -4,17 +4,27 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/itemCheckBoxKeyboardSettingTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:text="" />
+        android:orientation="horizontal">
 
-    <CheckBox
-        android:id="@+id/CheckBoxKeyboardSetting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:text="" />
+        <CheckBox
+            android:id="@+id/CheckBoxKeyboardSetting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/itemCheckBoxKeyboardSettingTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="@android:color/holo_blue_dark" />
 </LinearLayout>
