--- a/app/src/main/res/layout/item_rainbow_seekbar_keyboard_settings.xml
+++ b/app/src/main/res/layout/item_rainbow_seekbar_keyboard_settings.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/itemTextKeyboardSettingTitle"
+        android:id="@+id/itemRainbowSeekBarKeyboardSettingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/row_text_padding"
-        android:paddingTop="@dimen/row_text_padding"
+        android:layout_gravity="left"
         android:text=""
         android:textColor="@android:color/black"
         android:textSize="14sp" />
+
+    <com.heliocratic.mikola.firstproject.ui.keybord_setting.items_settings.ColorPickerSeekBar
+        android:id="@+id/RainbowSeekBarKeyboardSetting"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:paddingBottom="4dp"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:background="@android:color/holo_blue_dark" />
 </LinearLayout>
-
