--- a/app/src/main/res/layout/fragment_screen_keyboard_settings.xml
+++ b/app/src/main/res/layout/fragment_screen_keyboard_settings.xml
@@ -8,5 +8,7 @@
         android:id="@+id/keyboardSettingsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
