--- a/app/src/main/res/layout/item_separator_keyboard_settings.xml
+++ b/app/src/main/res/layout/item_separator_keyboard_settings.xml
@@ -3,19 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <TextView
-        android:id="@+id/itemTextKeyboardSettingTitle"
+        android:id="@+id/itemSeparatorKeyboardSettingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/row_text_padding"
-        android:paddingTop="@dimen/row_text_padding"
-        android:text=""
+        android:paddingLeft="@dimen/row_separator_left_padding"
+        android:background="@android:color/holo_blue_dark"
         android:textColor="@android:color/black"
-        android:textSize="14sp" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:text="" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@android:color/holo_blue_dark" />
+        android:background="@android:color/black" />
 </LinearLayout>
-
