--- a/app/src/main/res/layout/item_separator_keyboard_settings.xml
+++ b/app/src/main/res/layout/item_separator_keyboard_settings.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/paddingListViewSettingKeyboard"
+    android:paddingRight="@dimen/paddingListViewSettingKeyboard" >
+
     <TextView
         android:id="@+id/itemSeparatorKeyboardSettingTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/row_separator_left_padding"
-        android:background="@android:color/holo_blue_dark"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="" />
+        android:layout_height="@dimen/separatorHeightSettingKeyboard"
+        android:background="@color/separatorItemsBackgroundColorSettingKeyboard"
+        android:fontFamily="sans-serif"
+        android:gravity="center_vertical"
+        android:text=""
+        android:textColor="@color/textColorSettingKeyboard"
+        android:textSize="@dimen/itemsTextSizeSettingKeyboard" />
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@android:color/black" />
+        android:layout_height="@dimen/lineSeparatorHeightSettingKeyboard"
+        android:layout_gravity="bottom"
+        android:background="@color/lineSeparatorItemBackgroundColorSettingKeyboard" />
 </LinearLayout>
