--- a/app/src/main/res/layout/fragment_screen_keyboard_settings.xml
+++ b/app/src/main/res/layout/fragment_screen_keyboard_settings.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/listViewBackgroundColorSettingKeyboard"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/keyboardSettingsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:divider="@null"
-        android:dividerHeight="0dp"
-        android:layout_gravity="center_horizontal" />
+        android:dividerHeight="0dp" />
 </LinearLayout>
