--- a/app/src/main/res/layout/item_checkbox_keyboard_setting.xml
+++ b/app/src/main/res/layout/item_checkbox_keyboard_setting.xml
@@ -2,29 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/paddingListViewSettingKeyboard"
+    android:paddingRight="@dimen/paddingListViewSettingKeyboard">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="@dimen/itemsHeightSettingKeyboard"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/paddingItemsSettingKeyboard">
 
         <CheckBox
             android:id="@+id/CheckBoxKeyboardSetting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="@dimen/paddingCheckBoxSettingKeyboard"
             android:text="" />
 
         <TextView
             android:id="@+id/itemCheckBoxKeyboardSettingTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
             android:text=""
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+            android:textColor="@color/textColorSettingKeyboard"
+            android:textSize="@dimen/itemsTextSizeSettingKeyboard" />
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@android:color/holo_blue_dark" />
+        android:layout_height="@dimen/lineSeparatorHeightSettingKeyboard"
+        android:background="@color/lineSeparatorBackgroundColorSettingKeyboard" />
 </LinearLayout>
