--- a/app/src/main/res/layout/item_text_keyboard_setting.xml
+++ b/app/src/main/res/layout/item_text_keyboard_setting.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/paddingListViewSettingKeyboard"
+    android:paddingRight="@dimen/paddingListViewSettingKeyboard">
 
     <TextView
         android:id="@+id/itemTextKeyboardSettingTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/row_text_padding"
-        android:paddingTop="@dimen/row_text_padding"
+        android:layout_height="@dimen/itemsHeightSettingKeyboard"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/paddingItemsSettingKeyboard"
         android:text=""
-        android:textColor="@android:color/black"
-        android:textSize="14sp" />
+        android:textColor="@color/textColorSettingKeyboard"
+        android:textSize="@dimen/itemsTextSizeSettingKeyboard" />
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@android:color/holo_blue_dark" />
+        android:layout_height="@dimen/lineSeparatorHeightSettingKeyboard"
+        android:background="@color/lineSeparatorBackgroundColorSettingKeyboard" />
 </LinearLayout>
 
