--- a/app/src/main/res/values/keyboard_settings_strings.xml
+++ b/app/src/main/res/values/keyboard_settings_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="keyboard_settings_items_titles">
+    <string-array name="keyboardSettingsItemsTitles">
         <item>Ui</item>
         <item>Background color</item>
         <item>Background transparency</item>
@@ -23,4 +23,31 @@
         <item>About us</item>
         <item>Contact us</item>
     </string-array>
+
+    <string-array name="keyboardSizeMode">
+        <item>Full screen</item>
+        <item>Half screen bottom</item>
+        <item>Two edge separated</item>
+    </string-array>
+
+    <string-array name="fontStyle">
+        <item>Times New Roman</item>
+        <item>Arial</item>
+        <item>Calibri</item>
+    </string-array>
+
+    <string-array name="textSpeech">
+        <item>None</item>
+        <item>Literally</item>
+        <item>World</item>
+    </string-array>
+
+    <string-array name="keySound">
+        <item>None</item>
+        <item>Beep</item>
+        <item>Tap</item>
+        <item>Click</item>
+    </string-array>
+
+    <string name="contactUsUrl">https://lubomyrivanitskiy.wordpress.com/2015/11/27/%D0%BD%D0%BE%D1%82%D0%B0%D1%82%D0%BA%D0%B8/</string>
 </resources>
